--- a/app/src/main/res/layout/contact_info.xml
+++ b/app/src/main/res/layout/contact_info.xml
@@ -32,7 +32,7 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:fitsSystemWindows="true"
-                android:src="@mipmap/testbg"
+                android:src="@mipmap/ic_launcher"
                 app:layout_collapseMode="parallax"
                 />
             <de.hdodenhof.circleimageview.CircleImageView
