--- a/app/src/main/res/layout/record_edit_1.xml
+++ b/app/src/main/res/layout/record_edit_1.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:layout_gravity="center|bottom"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="81.0dp"
@@ -47,6 +51,7 @@
             android:gravity="center"
             android:layout_marginTop="18dp"
             />
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
 
 
