--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,15 @@
         <item name="android:windowExitAnimation">@anim/hiddenpw</item>
     </style>
 
+    <style name="mystyle" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@drawable/corners_bg_white</item>
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
+
+
+
 </resources>
