--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -17,15 +17,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="104dp"
-            android:layout_height="104dp"
-            android:layout_margin="5dp"
-            android:id="@+id/person_img"
-            android:src="@mipmap/touxiang2"
-            android:layout_gravity="center_horizontal"
-            app:civ_border_color="@color/tabTextSelectedColor"
-            app:civ_border_width="1dp" />
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="104dp"
+                android:layout_height="104dp"
+                android:layout_margin="5dp"
+                android:id="@+id/person_img"
+                android:src="@mipmap/touxiang2"
+                android:layout_gravity="center_horizontal"
+                app:civ_border_color="@color/tabTextSelectedColor"
+                app:civ_border_width="1dp" />
+            <TextView
+
+                android:id="@+id/person_tv"
+                android:textSize="52sp"
+                android:textColor="@color/white"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </FrameLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
