--- a/app/src/main/res/layout/record_item.xml
+++ b/app/src/main/res/layout/record_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:contentPadding="2dp"
+    app:contentPadding="6dp"
     app:cardElevation="2dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,32 +11,45 @@
     android:id="@+id/record_card_view"
     >
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
+        <FrameLayout
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:id="@+id/person_rl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:id="@+id/person_img"
+                android:src="@mipmap/touxiang"
+                android:layout_margin="2dp"
+                app:civ_border_color="@color/tabTextSelectedColor"
+                app:civ_border_width="1dp"
+                />
+            <TextView
+                android:id="@+id/person_tv"
+                android:textSize="24sp"
+                android:textColor="@color/white"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </FrameLayout>
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:id="@+id/person_img"
-            android:src="@mipmap/touxiang"
-            android:layout_marginLeft="5dp"
-            android:layout_margin="2dp"
-            app:civ_border_color="@color/tabTextSelectedColor"
-            app:civ_border_width="1dp"
-            />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
+            android:layout_height="26dp"
             android:id="@+id/person_name"
             android:text="姓名"
             android:textSize="16sp"
             android:textColor="@color/black"
             android:gravity="bottom"
-            android:layout_toEndOf="@id/person_img"
-            android:layout_toRightOf="@id/person_img"
+            android:layout_toRightOf="@id/person_rl"
             android:layout_marginLeft="10dp"
+
             />
 
         <TextView
@@ -44,25 +57,24 @@
             android:layout_height="16dp"
             android:id="@+id/contact_type"
             android:text="来电"
-            android:textColor="@color/black"
-            android:textSize="12sp"
+            android:textColor="@color/gray"
+            android:textSize="13sp"
             android:layout_below="@+id/person_name"
-            android:layout_toEndOf="@+id/person_img"
-            android:layout_toRightOf="@+id/person_img"
-            android:layout_marginLeft="10dp"
+            android:layout_alignLeft="@+id/person_name"
             android:gravity="center"
+            android:layout_alignBottom="@+id/person_rl"
             />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="16dp"
             android:text=","
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
             android:textSize="12sp"
             android:id="@+id/divide1"
             android:layout_below="@id/person_name"
-            android:layout_toEndOf="@+id/contact_type"
             android:layout_toRightOf="@+id/contact_type"
+            android:layout_alignBottom="@+id/contact_type"
             android:gravity="center"/>
 
         <TextView
@@ -70,25 +82,34 @@
             android:layout_height="16dp"
             android:id="@+id/contact_area"
             android:text="四川遂宁"
-            android:textSize="12sp"
-            android:textColor="@color/black"
+            android:textSize="13sp"
+            android:textColor="@color/gray"
             android:layout_below="@id/person_name"
-            android:layout_toEndOf="@+id/divide1"
             android:layout_toRightOf="@+id/divide1"
+            android:layout_alignBottom="@id/divide1"
             android:gravity="center"
             />
-
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="20dp"
+            android:layout_height="16dp"
+            android:text=","
+            android:textColor="@color/gray"
+            android:textSize="12sp"
+            android:id="@+id/divide2"
+            android:layout_below="@id/person_name"
+            android:layout_toRightOf="@+id/contact_area"
+            android:layout_alignBottom="@+id/contact_type"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="16dp"
             android:id="@+id/contact_time"
             android:text="16/5/6星期五"
-            android:textSize="14sp"
-            android:layout_centerVertical="true"
-            android:layout_alignTop="@+id/more_btn"
-            android:layout_toLeftOf="@+id/more_btn"
-            android:layout_toStartOf="@+id/more_btn"
-            android:layout_marginRight="5dp"
+            android:textSize="13sp"
+            android:layout_below="@id/person_name"
+            android:layout_toRightOf="@id/divide2"
+            android:layout_alignBottom="@id/contact_area"
+            android:gravity="center"
             />
 
         <ImageButton
