--- a/app/src/main/res/layout/record_search.xml
+++ b/app/src/main/res/layout/record_search.xml
@@ -54,6 +54,7 @@
     <ListView
         android:id="@+id/records_search_listView"
         android:layout_width="match_parent"
+        android:divider="@null"
         android:layout_height="wrap_content"/>
 </LinearLayout>
 
